# quantglass

./: .dockerignore  .gitignore  AGPL-COMPLIANCE.md  BACKERS.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GOVERNANCE.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  SPONSORS.md  SUPPORT.md  THIRD-PARTY-NOTICES.md  TRADEMARKS.md  docker-compose.yml  httpx2.py  package.json  ruff.toml
apps/backend/: README.md  alphaterminal-backend.spec  httpx2.py  pyproject.toml  quantglass-backend.spec  run_server.py
apps/backend/app/: __init__.py  main.py  scheduler.py  server_mode.py  version.py
apps/backend/app/api/: __init__.py
apps/backend/app/core/: config.py
apps/backend/app/extensions/: __init__.py  base.py  contracts.py  registry.py  sdk.py  validation.py
apps/backend/app/fixtures/: market_content.py
apps/backend/app/providers/: base.py  keyed.py  manager.py  public.py
apps/backend/migrations/: 0001_initial.sql
apps/backend/scripts/: build_sidecar.py  export_openapi.py  manage_state_bundle.py  validate_extension_fixture.py
apps/backend/tests/: test_ai_coach.py  test_backtest.py  test_backtest_metrics.py  test_calibration.py  test_calibration_corridor.py  test_composites.py  test_constitution.py  test_context_signals.py  test_copilot.py  test_dataset_export.py  test_events.py  test_extensions.py  test_extensions_toggle.py  test_fact_guard_i18n.py  test_indicators.py  test_integrity.py  test_learn_assessments.py  test_learn_library.py  test_learn_live.py  test_learn_mastery.py  test_learn_moments.py  test_learn_readiness.py  test_learn_routes.py  test_lesson_content.py  test_lesson_localization.py  test_lesson_packs.py  test_lesson_translation_overlays.py  test_live_orders.py  test_locale.py  test_macro_context.py  test_market_universe.py  test_mcp.py  test_migrations.py  test_mission_catalog.py  test_mission_localization.py  test_mission_overlay_files.py  test_missions.py  test_model_gateway.py  test_narration.py  test_notifications.py  (+19 more)
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
(+506 files in other folders)
