# SPDX-FileCopyrightText: 2026 QuantGlass contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "quantglass-backend"
version = "0.1.0"
description = "Local FastAPI backend for QuantGlass"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
  "apscheduler>=3.10,<4",
  "cryptography>=43,<45",
  "duckdb>=1.0,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.4,<3",
  "uvicorn>=0.30,<1",
  "websockets>=15,<16",
]

[project.optional-dependencies]
dev = ["jsonschema>=4,<5", "pytest>=8,<10", "ruff>=0.15,<1"]
package = ["pyinstaller>=6,<7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
